Add first prototype

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_album"
+            style="@style/ButtonNavigationTheme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/spacingMedium"
+            android:layout_marginRight="@dimen/spacingMedium"
+            android:layout_weight="1"
+            android:text="Album" />
+
+        <Button
+            android:id="@+id/button_artist"
+            style="@style/ButtonNavigationTheme"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/spacingMedium"
+            android:layout_marginRight="@dimen/spacingMedium"
+            android:layout_weight="1"
+            android:text="Tracklist" />
+    </LinearLayout>
+
     <TextView
+        style="@style/TextViewArtist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/spacingMedium"
+        android:layout_marginRight="@dimen/spacingMedium"
+        android:layout_marginTop="@dimen/spacingBig"
+        android:text="Bliss n Eso" />
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginLeft="@dimen/spacingMedium"
+        android:layout_marginRight="@dimen/spacingMedium"
+        android:adjustViewBounds="true"
+        android:src="@drawable/image_album" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        style="@style/TextViewAlbum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/spacingMedium"
+        android:layout_marginRight="@dimen/spacingMedium"
+        android:text="Off the grid" />
+
+    <TextView
+        style="@style/TextViewYear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/spacingMedium"
+        android:layout_marginRight="@dimen/spacingMedium"
+        android:text="2017" />
+</LinearLayout>
