--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,32 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorButtonNormal">@color/white</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="ButtonNavigationTheme">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="TextViewArtist">
+        <item name="android:textSize">@dimen/textSizeHuge</item>
+        <item name="android:textColor">@color/nero</item>
+    </style>
+
+    <style name="TextViewAlbum">
+        <item name="android:textSize">@dimen/textSizeBig</item>
+        <item name="android:textColor">@color/nero</item>
+    </style>
+
+    <style name="TextViewYear">
+        <item name="android:textSize">@dimen/textSizeLarge</item>
+        <item name="android:textColor">@color/nero</item>
     </style>
 
 </resources>
