--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="@dimen/spacingMedium">
 
     <TextView
-        android:id="@+id/text_view_song"
+        android:id="@+id/text_view_list_song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -14,19 +14,19 @@
         tools:text="Song" />
 
     <TextView
-        android:id="@+id/text_view_artist"
+        android:id="@+id/text_view_list_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_view_song"
+        android:layout_below="@+id/text_view_list_song"
         tools:text="Artist" />
 
     <TextView
-        android:id="@+id/text_view_song_length"
+        android:id="@+id/text_view_list_song_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_below="@+id/text_view_song"
+        android:layout_below="@+id/text_view_list_song"
         android:layout_marginTop="8dp"
         tools:text="5:05" />
 </RelativeLayout>
