Redesign buttons and the song list

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:singleLine="true"
+        android:textColor="@color/nero"
+        android:textSize="16sp"
         tools:text="Song" />
 
     <TextView
@@ -18,6 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_view_list_song"
+        android:textColor="@color/grey"
+        android:textSize="12sp"
         tools:text="Artist" />
 
     <TextView
@@ -25,8 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:layout_below="@+id/text_view_list_song"
-        android:layout_marginTop="8dp"
+        android:layout_toLeftOf="@+id/text_view_list_artist"
+        android:textColor="@color/grey"
+        android:textSize="16sp"
         tools:text="5:05" />
 </RelativeLayout>
