--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,32 +6,17 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+
+    <Button
+        android:id="@+id/button_artist"
+        style="@style/ButtonNavigationTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:orientation="horizontal">
+        android:drawableLeft="@drawable/ic_tracklist_32"
+        android:drawablePadding="@dimen/spacingMedium"
+        android:text="Tracklist"
+        android:textAlignment="viewStart" />
 
-        <Button
-            android:id="@+id/button_album"
-            style="@style/ButtonNavigationTheme"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacingMedium"
-            android:layout_marginRight="@dimen/spacingMedium"
-            android:layout_weight="1"
-            android:text="Album" />
-
-        <Button
-            android:id="@+id/button_artist"
-            style="@style/ButtonNavigationTheme"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacingMedium"
-            android:layout_marginRight="@dimen/spacingMedium"
-            android:layout_weight="1"
-            android:text="Tracklist" />
-    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
