--- a/app/src/main/res/layout/song_list.xml
+++ b/app/src/main/res/layout/song_list.xml
@@ -4,32 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/button_album"
+        style="@style/ButtonNavigationTheme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_album"
-            style="@style/ButtonNavigationTheme"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacingMedium"
-            android:layout_marginRight="@dimen/spacingMedium"
-            android:layout_weight="1"
-            android:text="Album" />
-
-        <Button
-            android:id="@+id/button_artist"
-            style="@style/ButtonNavigationTheme"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacingMedium"
-            android:layout_marginRight="@dimen/spacingMedium"
-            android:layout_weight="1"
-            android:text="Tracklist" />
-    </LinearLayout>
+        android:drawableLeft="@drawable/ic_album_32"
+        android:drawablePadding="@dimen/spacingMedium"
+        android:text="Album"
+        android:textAlignment="viewStart" />
 
     <ListView
         android:id="@+id/list"
