--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#9E9E9E</color>
     <color name="white">#FFFFFF</color>
     <color name="nero">#212121</color>
+    <color name="grey">#757575</color>
 </resources>
