--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Text sizes. -->
+    <!-- Text sizes -->
     <dimen name="textSizeHuge">48sp</dimen>
     <dimen name="textSizeBig">24sp</dimen>
     <dimen name="textSizeLarge">20sp</dimen>
     <dimen name="textSizeMedium">16sp</dimen>
+    <dimen name="textSizeSmall">12sp</dimen>
 
-
-    <!-- Typical spacing between two views. -->
+    <!-- Typical spacing between two views -->
     <dimen name="spacingBig">32dp</dimen>
     <dimen name="spacingMedium">16dp</dimen>
     <dimen name="spacingNormal">14dp</dimen>
