--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,9 +5,14 @@
     <dimen name="textSizeBig">24sp</dimen>
     <dimen name="textSizeLarge">20sp</dimen>
     <dimen name="textSizeMedium">16sp</dimen>
+    <dimen name="textSizeNormal">14sp</dimen>
     <dimen name="textSizeSmall">12sp</dimen>
 
     <!-- Typical spacing between two views -->
+
+    <dimen name="spacingSuper">150dp</dimen>
+    <dimen name="spacingImmense">90dp</dimen>
+    <dimen name="spacingGiant">55dp</dimen>
     <dimen name="spacingBig">32dp</dimen>
     <dimen name="spacingMedium">16dp</dimen>
     <dimen name="spacingNormal">14dp</dimen>
